Update 7.01 Understand and comply with investigations.md

--- a/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
+++ b/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
@@ -6,7 +6,7 @@ There are three main types of investigations you’ll come across:
 
 | Investigation Type            | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 | ----------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Administrative Investigations | Sometimes called operational or internal, these are run by organizations to enforce their own internal rules, policies, and security standards. The focus isn’t necessarily on criminal charges but on ensuring employees, vendors, or contractors follow company policies, code of conduct, or employment agreements. The goal is to find out if rules were broken and take action — such as retraining the employee, firing them, or strengthening weak processes. Evidence collected may stay internal unless the issue escalates into a civil lawsuit or criminal case. Chain of custody is important, but the process is typically faster and less formal than in criminal or civil cases. |
+| Administrative Investigations | Sometimes called **operational** or **internal**, these are run by organizations to enforce their own internal rules, policies, and security standards. The focus isn’t necessarily on criminal charges but on ensuring employees, vendors, or contractors follow company policies, code of conduct, or employment agreements. The goal is to find out if rules were broken and take action — such as retraining the employee, firing them, or strengthening weak processes. Evidence collected may stay internal unless the issue escalates into a civil lawsuit or criminal case. Chain of custody is important, but the process is typically faster and less formal than in criminal or civil cases. |
 | Criminal Investigations       | Focus on detecting, proving, and prosecuting violations of the law. Conducted by police, federal agencies, and prosecutors, with strict rules around evidence collection, chain of custody, and legal procedures. Evidence must meet criminal court standards: reliable, complete, and collected without violating rights. Most criminal cases must meet the “beyond a reasonable doubt” standard. Examples include hacking, ransomware, fraud, identity theft, or unauthorized data breaches. Cybersecurity professionals supporting these cases must avoid contaminating evidence and work alongside law enforcement.                                                                         |
 | Civil Investigations          | Happen when an organization or individual seeks compensation or resolution rather than punishment. Common in business conflicts, intellectual property theft, breach of contract, or cases requiring quantification of damages. The burden of proof is lower than in criminal cases (usually "preponderance of the evidence"). Evidence handling still matters, especially for court presentation. Cybersecurity experts may gather logs, snapshots, or system records to support claims, such as vendor misuse of customer data or licensing violations.                                                                                                                                       |
 
@@ -18,20 +18,21 @@ We can recap the investigation types as follows:
 | Criminal                     | Prove violation of criminal law        | Law enforcement, prosecutors       | Must meet strict legal standards | Ransomware attack or system intrusion  |
 | Civil                        | Resolve disputes and seek compensation | Legal teams, private investigators | Used in court for damages        | Vendor steals proprietary source code  |
 
-:bulb: Digital Forensics and Incident Response (DFIR) is a specialized field within cybersecurity focused on identifying, investigating, and mitigating security incidents. Digital forensics involves collecting, preserving, and analyzing digital evidence from systems, networks, and devices to understand how an incident occurred and who was responsible. Incident Response (IR) focuses on detecting threats in real-time, containing breaches, and recovering business operations while minimizing damage. Together, DFIR helps organizations strengthen security postures and supports legal and regulatory actions after cyber incidents.
+:bulb: **Digital Forensics and Incident Response (DFIR)** is a specialized field within cybersecurity focused on identifying, investigating, and mitigating security incidents. Digital forensics involves collecting, preserving, and analyzing digital evidence from systems, networks, and devices to understand how an incident occurred and who was responsible. Incident Response (IR) focuses on detecting threats in real-time, containing breaches, and recovering business operations while minimizing damage. Together, DFIR helps organizations strengthen security postures and supports legal and regulatory actions after cyber incidents.
 
-:link: EDRM (Electronic Discovery Reference Model) is a framework that guides how digital evidence is identified, preserved, collected, and presented during legal investigations and court cases.
-It helps organizations handle electronically stored information (ESI) in a structured way — making sure nothing is lost, tampered with, or misinterpreted.
+:link: **EDRM (Electronic Discovery Reference Model)** is a framework that guides how digital evidence is identified, preserved, collected, and presented during legal investigations and court cases.
+It helps organizations handle **electronically stored information (ESI)** in a structured way — making sure nothing is lost, tampered with, or misinterpreted.
 The EDRM process typically follows these stages:
-Information Governance – Organize and manage data before any legal action.
-Identification – Find potentially relevant data.
-Preservation – Protect data from alteration or deletion.
-Collection – Gather the preserved data securely.
-Processing – Filter and prepare data for review.
-Review – Analyze the data for relevance and legal privilege.
-Analysis – Understand patterns, timelines, and facts.
-Production – Share the data with opposing counsel or the court.
-Presentation – Use the data as evidence in legal proceedings.
+
+- Information Governance: Organize and manage data before any legal action.
+- Identification: Find potentially relevant data.
+- Preservation: Protect data from alteration or deletion.
+- Collection: Gather the preserved data securely.
+- Processing: Filter and prepare data for review.
+- Review: Analyze the data for relevance and legal privilege.
+- Analysis: Understand patterns, timelines, and facts.
+- Production: Share the data with opposing counsel or the court.
+- Presentation: Use the data as evidence in legal proceedings.
 
 The model is available here: [https://edrm.net/edrm-model/current/](https://edrm.net/edrm-model/current/)
 
