Update 7.01 Understand and comply with investigations.md

--- a/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
+++ b/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
@@ -83,7 +83,7 @@ What are the main stages of the EDRM process?
 
 ## 7.1.1 Evidence collection and handling ##
 
-When it comes to cybersecurity investigations, evidence collection and handling are the foundation of any solid case, whether it's for an internal administrative review, a civil lawsuit, or criminal prosecution. Understanding the types of evidence, the rules that make evidence admissible in court, and the best practices for handling digital evidence is essential for incident responders, forensic analysts, and cybersecurity professionals. This document breaks down these concepts in plain language and offers practical advice to strengthen your response capabilities.
+When it comes to cybersecurity investigations, evidence collection and handling are the foundation of any solid case, whether it's for an internal administrative review, a civil lawsuit, or criminal prosecution. Understanding the types of evidence, the rules that make evidence admissible in court, and the best practices for handling digital evidence is essential for incident responders, forensic analysts, and cybersecurity professionals.
 
 The types of evidences we may deal with are:
 1. **Real Evidence.** Real evidence refers to physical objects involved in the incident. In cybersecurity, this can include hard drives, USB devices, network appliances, printed documents, and even physical security items like keycards or surveillance recordings. These items must be carefully preserved and documented, as they can directly prove or disprove a claim.
