Update 7.01 Understand and comply with investigations.md

--- a/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
+++ b/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
@@ -116,9 +116,9 @@ The chain of custody should include:
 - How it was stored and protected.
 - Every transfer or handoff, including time, date, and the individuals involved.
 
-Breaking the chain of custody, or failing to document a handoff, can result in the evidence being excluded from court proceedings.
+:brain: Breaking the chain of custody, or failing to document a handoff, can result in the evidence being excluded from court proceedings.
 
-In legal terms, **hearsay** refers to "an out-of-court statement offered to prove the truth of the matter asserted." Generally, hearsay is not admissible unless an exception applies. For example, system logs can sometimes be considered hearsay unless you can demonstrate their authenticity through metadata, audit trails, or corroboration from a qualified custodian.
+In legal terms, **hearsay** refers to "*an out-of-court statement offered to prove the truth of the matter asserted.*" Generally, hearsay is not admissible unless an exception applies. For example, system logs can sometimes be considered hearsay unless you can demonstrate their authenticity through metadata, audit trails, or corroboration from a qualified custodian.
 Incident response teams should always be mindful of this rule when preparing evidence for possible legal action. Clear documentation and integrity verification help prevent issues related to hearsay.
 
 In general, Incident Response Best Practices for Evidence Handling can be summed up as:
