Update 7.01 Understand and comply with investigations.md

--- a/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
+++ b/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
@@ -189,7 +189,9 @@ flowchart LR
 
 ## 7.1.2 Reporting and documentation ##
 
-When you think about evidence in a cybersecurity investigation, most people picture hard drives, logs, packet captures, or screenshots. But evidence alone isn't enough to win a case, convince stakeholders, or even make an incident report worth reading. What separates "raw data" from "court-ready proof" is how you report it, document it, and stand behind it. In many ways, the story you tell through evidence is as important as the data itself.
+When you think about evidence in a cybersecurity investigation, most people picture hard drives, logs, packet captures, or screenshots. But evidence alone isn't enough to win a case, convince stakeholders, or even make an incident report worth reading. 
+
+:necktie: What separates "raw data" from "court-ready proof" is how you report it, document it, and stand behind it. In many ways, the story you tell through evidence is as important as the data itself.
 
 As a cybersecurity professional, your future will involve more than simply identifying technical clues. You'll need to understand how to handle and present those clues in a way that others—lawyers, auditors, regulators, managers, or even a jury—can trust, understand, and act upon.
 
@@ -204,12 +206,12 @@ Before diving into reporting formats or templates, let’s focus on the qualitie
 - **Admissible.** This is the ultimate test: would a court allow it? To be admissible, evidence must meet legal criteria like relevance, materiality, and competence. Following strict handling procedures and documenting every step of collection increases the chance your evidence will hold up under scrutiny.
 
 A well-documented investigation is a time machine. Even months or years later, a clear report lets anyone walk through your steps and understand what happened. Here’s how to approach it:
-- Document in Real Time Memories fade and systems change. Write everything down as soon as you do it: the time you imaged a drive, the tool version you used, the exact commands or procedures you followed, and who was present.
-- Be Methodical, Not Creative This is one area where creativity can hurt. Stick to known frameworks, templates, and checklists. Consistency reduces errors and enhances trust.
-- Tell a Story, Not Just Facts Facts alone are dry and often confusing. Shape them into a narrative: what was discovered, when, what actions were taken, why those decisions were made, and what the outcomes were.
-- Support with Metadata and Screenshots A human-readable timeline is great, but supporting it with evidence hashes, log file timestamps, screenshots, and diagrams makes your work irrefutable.
+- **Document in Real Time.** Memories fade and systems change. Write everything down as soon as you do it: the time you imaged a drive, the tool version you used, the exact commands or procedures you followed, and who was present.
+- **Be Methodical, Not Creative.** This is one area where creativity can hurt. Stick to known frameworks, templates, and checklists. Consistency reduces errors and enhances trust.
+- **Tell a Story, Not Just Facts.** Facts alone are dry and often confusing. Shape them into a narrative: what was discovered, when, what actions were taken, why those decisions were made, and what the outcomes were.
+- **Support with Metadata and Screenshots.** A human-readable timeline is great, but supporting it with evidence hashes, log file timestamps, screenshots, and diagrams makes your work irrefutable.
 
-Incident reports act as a passport for your evidence to move through internal reviews, compliance audits, and legal scrutiny. A typical incident report includes:
+**Incident reports** act as a passport for your evidence to move through internal reviews, compliance audits, and legal scrutiny. A typical incident report includes:
 - Summary of the incident
 - Who discovered it and when
 - Steps taken to secure and collect evidence
@@ -218,9 +220,9 @@ Incident reports act as a passport for your evidence to move through internal re
 - Integrity verification (hashes before and after collection)
 - Conclusions, recommendations, and pending actions
 
-A well-prepared report doesn't just defend your actions; it gives your organization the power to make informed decisions, patch vulnerabilities, and prepare for regulatory questions.
+:brain: A well-prepared report doesn't just defend your actions; it gives your organization the power to make informed decisions, patch vulnerabilities, and prepare for regulatory questions.
 
-:necktie: Evidence is more than a file on a USB stick or a printout of logs. It is the silent witness to security incidents—and your job is to make sure its voice is heard, clearly and credibly. In cybersecurity, where so much happens invisibly and at machine speed, your ability to document and report effectively can mean the difference between a resolved case and a failed prosecution. Take pride in the process, not just the outcome.
+:necktie: Evidence is more than a file on a USB stick or a printout of logs. It is the silent witness to security incidents—and your job is to make sure its voice is heard, clearly and credibly. In cybersecurity, where so much happens invisibly and at machine speed, your ability to document and report effectively can mean the difference between a resolved case and a failed prosecution.
 
 ### Open Questions ###
 
@@ -230,7 +232,13 @@ A well-prepared report doesn't just defend your actions; it gives your organizat
 
 2. What are the key principles that evidence must adhere to in order to be credible in a cybersecurity investigation?
 
-<details> <summary>Show answer</summary> The key principles of credible evidence include: - **Accuracy:** Ensuring the evidence reflects the reality of the incident. - **Authenticity:** Proving the evidence hasn't been tampered with. - **Comprehensibility:** Making the evidence clear and understandable. - **Convincing:** Providing thorough, logically consistent evidence. - **Objective:** Presenting the facts without bias. - **Admissibility:** Ensuring the evidence meets legal criteria for relevance, materiality, and competence. </details>
+<details> <summary>Show answer</summary> The key principles of credible evidence include: 
+  - Accuracy: Ensuring the evidence reflects the reality of the incident. 
+  - Authenticity: Proving the evidence hasn't been tampered with. 
+  - Comprehensibility: Making the evidence clear and understandable. 
+  - Convincing: Providing thorough, logically consistent evidence. 
+  - Objective: Presenting the facts without bias. 
+  - Admissibility: Ensuring the evidence meets legal criteria for relevance, materiality, and competence. </details>
 
 3. How does accuracy in evidence collection impact a cybersecurity investigation?
 
