Update 7.02 Conduct logging and monitoring activities.md

--- a/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
+++ b/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
@@ -181,14 +181,15 @@ Picture this: A user reports a suspicious email. The SOAR system kicks in:
 
 What used to take a team hours can now happen in under a minute — consistently and accurately. This is the kind of workflow SOAR enables. And it’s not limited to phishing — malware analysis, brute-force response, insider threat triage — anything repeatable can be orchestrated.
 
-But automation alone isn’t enough. Threats evolve. Attackers don’t always leave signatures. That’s where machine learning (ML) comes into play. ML gives systems the ability to learn from data rather than being programmed with rigid rules.
+But automation alone isn’t enough. Threats evolve. Attackers don’t always leave signatures. That’s where **machine learning (ML)** comes into play. ML gives systems the ability to learn from data rather than being programmed with rigid rules.
 For example, consider user behavior. A rule-based system might say: “If a user logs in from China, alert.” But what if that user works in China?
-A machine learning model instead learns what “normal” looks like for that user — login times, locations, applications accessed — and flags deviations intelligently. This is known as anomaly detection.
+A machine learning model instead learns what “normal” looks like for that user — login times, locations, applications accessed — and flags deviations intelligently. This is known as **anomaly detection**.
 ML also shines in areas like:
 - Email filtering (identifying spam and phishing)
 - Endpoint protection (detecting unusual process behaviors)
 - Threat intelligence correlation (finding hidden connections between indicators)
-Whereas machine learning is about pattern recognition and prediction, artificial intelligence adds context and reasoning. AI systems can prioritize alerts based on asset criticality, assess intent from a series of actions, or suggest likely next steps in an attack chain.
+
+Whereas machine learning is about pattern recognition and prediction, **artificial intelligence** adds context and reasoning. AI systems can prioritize alerts based on asset criticality, assess intent from a series of actions, or suggest likely next steps in an attack chain.
 
 In SOAR environments, AI helps triage events — not just saying “this looks bad,” but suggesting why and what to do about it. It’s like having a junior analyst who’s read every security casebook and can make educated recommendations — instantly.
 
