Update 7.02 Conduct logging and monitoring activities.md

--- a/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
+++ b/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
@@ -250,6 +250,30 @@ Your monitoring system needs eyes and ears everywhere. That’s where **SIEM (Se
 
 **Syslog**, on the other hand, is a protocol used to send log messages from devices to a central server. Think of it like the postal service of event logs. Devices shout, “Hey, I saw this!” and syslog ensures the messages get delivered to a logging server or SIEM.
 
+
+The following diagram shows how Syslog messages flow through a typical enterprise logging setup — from network devices and servers to the central Syslog server and onward to a SIEM for correlation and analysis:
+
+```mermaid
+
+flowchart LR
+    A[Router / Switch / Firewall] -->|Syslog UDP 514| B(Syslog Server)
+    C[Application Server] -->|Syslog TCP/TLS| B
+    D[Linux/Unix Host] -->|Rsyslog / Syslog-ng| B
+    B -->|Log Forwarding / API| E[SIEM - e.g., Splunk, QRadar, ELK]
+    E -->|Correlation & Alerts| F[Security Analysts / SOC]
+    F -->|Incident Response| G[Remediation Actions]
+
+    style A fill:#ffffff,stroke:#000,stroke-width:1px
+    style C fill:#ffffff,stroke:#000,stroke-width:1px
+    style D fill:#ffffff,stroke:#000,stroke-width:1px
+    style B fill:#f9f9f9,stroke:#000,stroke-width:1px
+    style E fill:#f9f9f9,stroke:#000,stroke-width:1px
+    style F fill:#ffffff,stroke:#000,stroke-width:1px
+    style G fill:#ffffff,stroke:#000,stroke-width:1px
+```
+
+
+
 :necktie: Together, syslog and SIEM form a powerful combo: syslog gathers, SIEM thinks.
 
 Let’s say you’re monitoring 10,000 login events per day. Do you really need every single one? Use **sampling** — the practice of collecting a representative subset of data. This reduces processing overhead and storage costs, while still giving you visibility into trends and anomalies.
