Update 7.02 Conduct logging and monitoring activities.md

--- a/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
+++ b/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
@@ -473,7 +473,7 @@ Log management is the entire lifecycle of handling log data: generation, transmi
 
 Imagine an airline not maintaining flight logs. Pilots would have no reliable record of system failures, near misses, or even routine maintenance. Cybersecurity is no different: without logs, you're flying blind.
 
-:necktie: Good log management answers key questions:
+:brain: Good log management answers key questions:
 - What happened?
 - When did it happen?
 - Who did it?
@@ -492,19 +492,21 @@ Now, think about **thresholds**. You can't investigate every login failure—peo
 
 :bulb: Picture a hospital emergency room. If one person walks in coughing, it's normal. But if 50 people rush in coughing within an hour, you have a crisis. Thresholds help you separate isolated incidents from patterns that signal serious trouble.
 
-Here's a harsh reality: logs are evidence. If someone can alter them, they can erase their tracks. This makes log protection not just a technical necessity, but a legal one.
+Logs are evidence. If someone can alter them, they can erase their tracks. This makes log protection not just a technical necessity, but a legal one.
 
 Protecting logs involves several best practices:
-- Access Control: Only authorized personnel should be able to view or manage logs.
-- Integrity Checks: Use hashes to detect if a log has been tampered with.
-- Encryption: Logs should be encrypted in transit and at rest to prevent snooping.
-- Separation of Duties: Those who manage systems shouldn’t be able to edit the logs that record their activity.
+- **Access Control:** Only authorized personnel should be able to view or manage logs.
+- **Integrity Checks:** Use hashes to detect if a log has been tampered with.
+- **Encryption:** Logs should be encrypted in transit and at rest to prevent snooping.
+- **Separation of Duties:** Those who manage systems shouldn’t be able to edit the logs that record their activity.
 
 :bulb: In many insider threat cases, attackers first attempt to delete or alter logs after malicious actions. Smart organizations send logs in real-time to a separate, secured server—out of reach of the attacker’s permissions.
 
 :necktie: If it's not logged, it didn't happen. If it's logged but not protected, it might as well not have happened.
 
-Most people don't wake up excited to review gigabytes of system logs. But every breach investigation, every forensic triumph, every compliance audit that goes well—starts with good log management. Log management is the cybersecurity equivalent of health insurance. You don't appreciate it daily, but when disaster strikes, it's the only thing that keeps your world from collapsing.As a security professional, you need to approach logs as both historical records and active sensors. By managing them properly, defining auditable events and thresholds wisely, and protecting the integrity of log data fiercely, you build the foundation for leading secure, resilient organizations.
+Most people don't wake up excited to review gigabytes of system logs. But every breach investigation, every forensic triumph, every compliance audit that goes well—starts with good log management. Log management is the cybersecurity equivalent of health insurance. You don't appreciate it daily, but when disaster strikes, it's the only thing that keeps your world from collapsing. 
+:brain: As a security professional, you need to approach logs as both historical records and active sensors. 
+By managing them properly, defining auditable events and thresholds wisely, and protecting the integrity of log data fiercely, you build the foundation for leading secure, resilient organizations.
 
 ### Open Questions ###
 
@@ -514,31 +516,47 @@ Most people don't wake up excited to review gigabytes of system logs. But every 
 
 2. What critical questions should good log management be able to answer during an investigation?
 
-<details> <summary>Show answer</summary> Good log management should be able to answer: *What happened? When did it happen? Who was involved? Where did it happen from?* These questions are critical to building a clear timeline and understanding the scope of an incident. </details>
+<details> <summary>Show answer</summary> Good log management should be able to answer: 
+  
+  What happened? 
+  
+  When did it happen? 
+  
+  Who was involved? 
+  
+  Where did it happen from?
+  
+  These questions are critical to building a clear timeline and understanding the scope of an incident. </details>
 
 3. In the context of auditable events, why are thresholds important?
 
 <details> <summary>Show answer</summary> Thresholds help distinguish between normal behavior and suspicious activity by defining how often an event must occur before it demands attention. This reduces noise, prevents alert fatigue, and ensures security teams can prioritize genuine risks. </details>
 
-4. Give a real-world example of how poor log management contributed to a major security breach.
+4. What are three examples of events that should always be audited in a security-focused environment?
 
-<details> <summary>Show answer</summary> In the 2013 Target breach, attackers infiltrated the systems months in advance. Early warning signs were present in the logs, but because the logs were not effectively reviewed or acted upon, millions of customer records were stolen. This shows how ignored logs can translate into catastrophic breaches. </details>
+<details> <summary>Show answer</summary> Critical events to audit include: 
+  
+  - Authentication attempts (both successful and failed)
+  - Access to sensitive data
+  - Any changes to security settings or privileges
 
-5. What are three examples of events that should always be audited in a security-focused environment?
+These ensure accountability and provide evidence in case of suspicious activities. </details>
 
-<details> <summary>Show answer</summary> Critical events to audit include: - Authentication attempts (both successful and failed) - Access to sensitive data - Any changes to security settings or privileges These ensure accountability and provide evidence in case of suspicious activities. </details>
-
-6. Why is protecting the integrity of log data essential for both security operations and legal purposes?
+5. Why is protecting the integrity of log data essential for both security operations and legal purposes?
 
 <details> <summary>Show answer</summary> Protecting the integrity of log data is essential because logs serve as evidence during incident investigations and legal proceedings. If logs are tampered with, they lose their credibility, weakening both security response and potential legal cases. </details>
 
-7. How does separating the duties of system administrators and log managers enhance log security?
+6. How does separating the duties of system administrators and log managers enhance log security?
 
 <details> <summary>Show answer</summary> Separating system administrator and log manager roles ensures that individuals who might cause or witness security incidents cannot alter the records of their own activities. This enforces accountability and preserves the objectivity of the logs. </details>
 
-8. What are two key methods used to protect logs during transmission and storage?
+7. What are two key methods used to protect logs during transmission and storage?
 
-<details> <summary>Show answer</summary> Two key methods are: - Encrypting logs both during transmission and at rest to prevent unauthorized access - Using cryptographic hashes to verify log integrity and detect any tampering These ensure confidentiality, integrity, and evidentiary value. </details>
+<details> <summary>Show answer</summary> Two key methods are: 
+  - Encrypting logs both during transmission and at rest to prevent unauthorized access 
+  - Using cryptographic hashes to verify log integrity and detect any tampering 
+  
+  These ensure confidentiality, integrity, and evidentiary value. </details>
 
 ---
 
